# Inventory-rust-tauri

./: CHANGELOG.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-07-10-224204_create_caisses/: down.sql  up.sql
src-tauri/migrations/2023-07-10-225038_create_caisses/: up.sql
src-tauri/migrations/2023-07-13-125121_include_all_grau_tables/: down.sql  up.sql
src-tauri/src/: config.rs  database.rs  main.rs  schema.rs  utils.rs
src-tauri/src/cmds/: auth.rs  caisse.rs  comptebancaire.rs  database_cmd.rs  depense.rs  document.rs  emballage.rs  entreprise.rs  equipement.rs  facture.rs  factureexport.rs  fournisseur.rs  helper_functions.rs  lieustockage.rs  lieutravail.rs  local.rs  mod.rs  paiement.rs  personnel.rs  produit.rs  saison.rs  session.rs  setting.rs  tableachat.rs  tablearchivedoc.rs  tabledepense.rs  tabledocdoc.rs  tablefactureavoir.rs  tablepointage.rs  tableressourceachat.rs  tableressourcevente.rs  tabletransfert.rs  tablevente.rs  typeproduit.rs  user.rs
src-tauri/src/dbs/: mod.rs  shell.rs
src-tauri/src/models/: caisse.rs  comptebancaire.rs  depense.rs  document.rs  emballage.rs  entreprise.rs  equipement.rs  facture.rs  factureexport.rs  fournisseur.rs  lieustockage.rs  lieutravail.rs  local.rs  mod.rs  paiement.rs  personnel.rs  produit.rs  saison.rs  session.rs  setting.rs  tableachat.rs  tablearchivedoc.rs  tabledepense.rs  tabledocdoc.rs  tablefactureavoir.rs  tablepointage.rs  tablevente.rs  (+5 more)
(+115 files in other folders)
