[package]
name = "grau"
version = "3.0.0"
description = "grau backend"
authors = ["jaber"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "1.0.0"
tauri-specta = { version = "1.0.0", features = ["typescript"] }
tokio = { version = "1.26.0", features = ["macros"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
async-channel = "1.7"
dotenvy = "0.15"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
chrono = "0.4"
once_cell = "1.18.0"
diesel_migrations = {version = "2.1.0", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
